pynginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx
          image: koreanmonkey/front:v4
          ports:
            - containerPort: 80
          # 필요 시 환경변수 추가 가능
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: nginx-app
  ports:
    - port: 80          # ClusterIP 내부 포트
      targetPort: 80    # 컨테이너 Port
